--- a/html/xiangqingye.html
+++ b/html/xiangqingye.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../scss/xiangqing.css">
 </head>
+
 <body>
-    
+    <div id="head">
+        <div class="top">
+            <div class="top1">
+                <ul class="zuo">
+                    <li> <a href="">欢迎来到聚美吧！</a> </li>
+                    <li><a href="../html/denglu.html">请登录</a></li>
+                    <li><a href="../html/zhuce.html">快速注册</a></li>
+                </ul>
+                <ul class="right">
+                    <li><a href="">正品保证</a></li>
+                    <li><a href="">订单查询</a></li>
+                    <i></i>
+                    <li><a href="">收藏的品牌</a></li>
+                    <li class="jumei"><a href="">我的聚美↓</a> &nbsp;&nbsp; |</li>
+                    <li><a href="" id="shou">手机聚美</a>&nbsp; &nbsp; |</li>
+                    <li><a href="" class="gengduo">更多</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="mianshui"></div>
+            <span href="" class="cat-che"><a href="../html/gouwuche.html">去购物车结算</a>
+                <div class="cat-tan">
+                    <p>购物车中还没有商品，赶快去挑选心爱的商品吧！</p>
+                </div>
+            </span>
+        </div>
+    </div>
+
+
+
+    <div class="xiangqing">
+        <div class="zuo-x">
+            <p class="title">
+                雅诗兰黛（Estee Lauder）无痕持妆粉底液30ml
+                SPF10/PA++，长效持妆。不脱妆、持久型产品，不受温度、湿度和长时间活动的影响，清新自然一整天，不褪色、不晕染、不会掉落沾染衣物，轻盈舒适，清晨打造的妆容轻松保持一整天。 </p>
+            <img src="../img/11.jpg" alt="">
+            <div class="biaoqian">
+                <a href="">均匀肤色</a>
+                <a href="">持久</a>
+                <a href="">控油</a>
+                <a href="">防水</a>
+                <a href="">吸汗</a>
+                <span href="" class="fenxiang">分享到></span>
+            </div>
+
+
+
+
+
+
+        </div>
+        <div class="you-x">
+            <div class="frist">
+                <img src="../img/24276.jpg" alt="" class="tupian1">
+                <img src="../img/019_flag.jpg" alt="" class="tupian2">
+                <span class="tupian3">美国</span>
+            </div>
+            <div class="jiage">
+                <p>￥288</p>
+
+            </div>
+            <p class="goumai">70人已经购买</p>
+            <div class="xinghao">
+                <p>政策包邮： 本商品单件包邮(新疆部分区域除外)</p>
+                <p>服务政策： 本商品不支持退款</p>
+                <p>型                号</p>
+            </div>
+<buttom class="cat">
+    加入购物车
+</buttom>
+
+
+
+        </div>
+
+    </div>
 </body>
+
 </html>
