--- a/html/denglu.html
+++ b/html/denglu.html
@@ -24,17 +24,19 @@
       <div class="yhzc">
         <div class="kuang-header">
           <h2>登录聚美</h2>
-          <p>还没有聚美账号? <a href="">30秒注册</a></p>
+          <p>还没有聚美账号? <a href="../html/zhuce.html">30秒注册</a></p>
         </div>
         <input type="text" class="yonghuming" placeholder="请输入已经注册的用户名">
-      
+
         <input type="text" class="mima" placeholder="请输入您的密码">
-     <span class="qitian"> <p>七天免登录</p> <input type="checkbox" class="gouxuan"></span> 
+        <span class="qitian">
+          <p>七天免登录</p> <input type="checkbox" class="gouxuan">
+        </span>
         <button class="xieyi">登录</button>
-        
+
       </div>
     </div>
-    <p class="zhuce-bottom" >
+    <p class="zhuce-bottom">
       Copyright © 2010-2015 北京创锐文化传媒有限公司 Jumei.com 保留一切权利。客服热线：400-123-8888
       <br>
       京公网安备 11010102001226 号 | 京ICP证111033号 | 食品流通许可证 SP1101051110165515（1-1） | 营业执照 | 公示制度
@@ -46,7 +48,7 @@
       <div class="p4"></div>
       <div class="p5"></div>
     </div>
-   
+
   </div>
   <script src="../js/denglu.js"></script>
 </body>
