--- a/html/xiangqingye.html
+++ b/html/xiangqingye.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../scss/xiangqing.css">
-</head>
+    <script src="../js/jquery1.10.3.min.js"></script>
+</head>                  
 
 <body>
     <div id="head">
@@ -38,54 +39,39 @@
         </div>
     </div>
 
-
-
-    <div class="xiangqing">
-        <div class="zuo-x">
-            <p class="title">
-                雅诗兰黛（Estee Lauder）无痕持妆粉底液30ml
-                SPF10/PA++，长效持妆。不脱妆、持久型产品，不受温度、湿度和长时间活动的影响，清新自然一整天，不褪色、不晕染、不会掉落沾染衣物，轻盈舒适，清晨打造的妆容轻松保持一整天。 </p>
-            <img src="../img/11.jpg" alt="">
-            <div class="biaoqian">
-                <a href="">均匀肤色</a>
-                <a href="">持久</a>
-                <a href="">控油</a>
-                <a href="">防水</a>
-                <a href="">吸汗</a>
-                <span href="" class="fenxiang">分享到></span>
+    <div class="xq_wrap">
+        <div class="xq">
+          <div class="xq_tu">
+            <img src="" alt="" />
+            <div class="lens"></div>
+          </div>
+          <div class="xq_tu1">
+            <img src="" alt="" />
+          </div>
+          <div class="xq_xinxi">
+            <h2 id="mingcheng"></h2>
+            <h3 id="miaoshu"></h3>
+            <b id="jiage">价格：￥<span></span></b>
+            <div class="che">
+              <div class="tianjia">
+                <input type="text" value="1" id="zhi" />
+                <div id="jia">+</div>
+                <div id="jian">-</div>
+              </div>
+              <button id="btn">加入购物车</button>
             </div>
-
-
-
-
-
-
+          </div>
         </div>
-        <div class="you-x">
-            <div class="frist">
-                <img src="../img/24276.jpg" alt="" class="tupian1">
-                <img src="../img/019_flag.jpg" alt="" class="tupian2">
-                <span class="tupian3">美国</span>
-            </div>
-            <div class="jiage">
-                <p>￥288</p>
+      </div>
 
-            </div>
-            <p class="goumai">70人已经购买</p>
-            <div class="xinghao">
-                <p>政策包邮： 本商品单件包邮(新疆部分区域除外)</p>
-                <p>服务政策： 本商品不支持退款</p>
-                <p>型                号</p>
-            </div>
-<buttom class="cat">
-    加入购物车
-</buttom>
+  
 
 
 
         </div>
 
     </div>
+    <script src="../js/xiangqing.js"></script>
 </body>
 
 </html>
