--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 </div>
             </div>
 
-            <a href="" class="cat">
+            <a href="../html/gouwuche.html" class="cat">
                 <img src="http://p0.jmstatic.com/assets/cart.gif" alt="">
-                <span>去购物车结算 ⬇</span>
+                <span> 去购物车结算 ⬇</span>
             </a>
             <div class="cat-1">
                 购物车中还没有商品<br>
@@ -108,23 +108,15 @@
         </div>
     </div>
     <!-- 左侧边栏 -->
-    <ul id="left-nav">
-        <li>
-            <p>聚美</p>
-            <p>首页</p>
-        </li>
-        <li>
-            <a href="" class="bikan">
-                <span>每日必看</span>
-            </a>
-
-        </li>
-        <li>
-            <a href="" class="danpin">
-                <span>上新单品</span>
-            </a>
-        </li>
-    </ul>
+    <div id="floorNav" style="display:none">
+        <ul>
+            <li>聚美<br>首页</li>
+            <li>每日<br>必看<span>每日<br>必看</span></li>
+            <li>底部<span>底部</span></li>
+            <li>回到<br>顶部</li>
+        </ul>
+    </div>
+    
     <!-- 右边栏 -->
     <div id="right-nav">
         <ul class="s-nav">
